--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -6,179 +6,218 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/ppg_container"
+    <LinearLayout
+        android:id="@+id/status_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/ecg_container"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="spread"
-        app:layout_constraintVertical_weight="0.5">
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/ecg_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ppg_container"
+        app:layout_constraintBottom_toTopOf="@id/plot_container"
         app:layout_constraintVertical_chainStyle="spread"
-        app:layout_constraintVertical_weight="0.5">
+        app:layout_constraintVertical_weight="0.2">
 
-        <com.androidplot.xy.XYPlot
-            android:id="@+id/ecg_plot"
-            style="@style/FullScreenGraph"
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="@string/app_name"
+            android:textAlignment="gravity" />
 
-            app:graphBackgroundColor="@color/white"
-            app:graphMarginBottom="10dp"
-            app:graphMarginLeft="10dp"
-            app:graphMarginRight="10dp"
-            app:graphMarginTop="10dp"
-            app:gridBackgroundColor="@color/black"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+    </LinearLayout>
 
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            app:lineLabelInsetLeft="15dp"
-            app:renderMode="use_background_thread"
-            app:title="@string/ecg_plot_title"
-            app:titleTextColor="#000000"
-            app:titleTextSize="15dp" />
-
-        <TextView
-            android:id="@+id/ecg_hr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="30dp"
-            android:textAlignment="center"
-            android:textColor="#C00000"
-            android:textSize="30sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/ecg_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="8dp"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@id/ecg_hr"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/ecg_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            android:textColor="#000000"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/analysis_container"
+    <ScrollView
+        android:id="@+id/plot_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/ecg_container"
-        app:layout_constraintRight_toRightOf="parent"
+        android:fillViewport="true"
+        app:layout_constraintTop_toBottomOf="@id/status_container"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_weight="0.5"
-        android:visibility="invisible">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_chainStyle="spread"
+        app:layout_constraintVertical_weight="0.8">
 
-        <com.androidplot.xy.XYPlot
-            android:id="@+id/qrs_plot"
-            style="@style/FullScreenGraph"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content">
 
-            app:backgroundColor="#000000"
-            app:domainLineColor="#555555"
-            app:domainOriginLineColor="#555555"
-            app:domainTitleTextColor="#FFFFFF"
-            app:domainTitleTextSize="14dp"
-            app:graphBackgroundColor="#000000"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/ppg_container"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toTopOf="@id/ecg_container"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="spread"
+                app:layout_constraintVertical_weight="0.5">
 
-            app:graphMarginBottom="20dp"
-            app:graphMarginLeft="30dp"
-            app:graphMarginRight="30dp"
-            app:graphMarginTop="20dp"
-            app:gridBackgroundColor="#000000"
-            app:layout_constraintBottom_toTopOf="@id/hr_plot"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="spread"
-            app:layout_constraintVertical_weight="0.5"
-            app:paddingLeft="5dp"
-            app:rangeLineColor="#555555"
-            app:rangeOriginLineColor="#555555"
-            app:rangeTitle="@string/qrs_range_title"
-            app:rangeTitleTextColor="#FFFFFF"
-            app:rangeTitleTextSize="14dp"
-            app:renderMode="use_background_thread"
-            app:title="@string/hr_title"
-            app:titleTextColor="#000000"
-            app:titleTextSize="15dp" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.androidplot.xy.XYPlot
-            android:id="@+id/hr_plot"
-            style="@style/FullScreenGraph"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:backgroundColor="#000000"
-            app:domainLineColor="#555555"
-            app:domainOriginLineColor="#555555"
-            app:domainTitle="@string/hr_domain_title_time"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/ecg_container"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ppg_container"
+                app:layout_constraintVertical_chainStyle="spread"
+                app:layout_constraintVertical_weight="0.5">
 
-            app:domainTitleTextColor="#FFFFFF"
-            app:domainTitleTextSize="14dp"
-            app:graphBackgroundColor="#000000"
-            app:graphMarginBottom="20dp"
-            app:graphMarginLeft="30dp"
+                <com.androidplot.xy.XYPlot
+                    android:id="@+id/ecg_plot"
+                    style="@style/FullScreenGraph"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
 
-            app:graphMarginRight="30dp"
-            app:graphMarginTop="20dp"
-            app:gridBackgroundColor="#000000"
-            app:gridInsetBottom="20dp"
-            app:gridInsetLeft="25dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/qrs_plot"
-            app:layout_constraintVertical_chainStyle="spread"
-            app:layout_constraintVertical_weight="0.5"
-            app:paddingBottom="5dp"
-            app:paddingLeft="5dp"
-            app:paddingRight="5dp"
-            app:paddingTop="5dp"
-            app:rangeLineColor="#555555"
-            app:rangeOriginLineColor="#555555"
-            app:rangeTitle="@string/hr_range_title"
-            app:rangeTitleTextColor="#FFFFFF"
-            app:rangeTitleTextSize="14dp"
-            app:renderMode="use_background_thread"
-            app:title="@string/hr_title"
-            app:titleTextColor="#000000"
-            app:titleTextSize="15dp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                    app:graphBackgroundColor="@color/white"
+                    app:graphMarginBottom="10dp"
+                    app:graphMarginLeft="10dp"
+                    app:graphMarginRight="10dp"
+                    app:graphMarginTop="10dp"
+                    app:gridBackgroundColor="@color/black"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="1.0"
+                    app:lineLabelInsetLeft="15dp"
+                    app:renderMode="use_background_thread"
+                    app:title="@string/ecg_plot_title"
+                    app:titleTextColor="#000000"
+                    app:titleTextSize="15dp" />
+
+                <TextView
+                    android:id="@+id/ecg_hr"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginTop="30dp"
+                    android:textAlignment="center"
+                    android:textColor="#C00000"
+                    android:textSize="30sp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/ecg_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginTop="30dp"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginBottom="8dp"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="@id/ecg_hr"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/ecg_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:textColor="#000000"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/analysis_container"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/ecg_container"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintVertical_weight="0.5"
+                android:visibility="invisible">
+
+                <com.androidplot.xy.XYPlot
+                    android:id="@+id/qrs_plot"
+                    style="@style/FullScreenGraph"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+
+                    app:backgroundColor="#000000"
+                    app:domainLineColor="#555555"
+                    app:domainOriginLineColor="#555555"
+                    app:domainTitleTextColor="#FFFFFF"
+                    app:domainTitleTextSize="14dp"
+                    app:graphBackgroundColor="#000000"
+
+                    app:graphMarginBottom="20dp"
+                    app:graphMarginLeft="30dp"
+                    app:graphMarginRight="30dp"
+                    app:graphMarginTop="20dp"
+                    app:gridBackgroundColor="#000000"
+                    app:layout_constraintBottom_toTopOf="@id/hr_plot"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="spread"
+                    app:layout_constraintVertical_weight="0.5"
+                    app:paddingLeft="5dp"
+                    app:rangeLineColor="#555555"
+                    app:rangeOriginLineColor="#555555"
+                    app:rangeTitle="@string/qrs_range_title"
+                    app:rangeTitleTextColor="#FFFFFF"
+                    app:rangeTitleTextSize="14dp"
+                    app:renderMode="use_background_thread"
+                    app:title="@string/hr_title"
+                    app:titleTextColor="#000000"
+                    app:titleTextSize="15dp" />
+
+                <com.androidplot.xy.XYPlot
+                    android:id="@+id/hr_plot"
+                    style="@style/FullScreenGraph"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    app:backgroundColor="#000000"
+                    app:domainLineColor="#555555"
+                    app:domainOriginLineColor="#555555"
+                    app:domainTitle="@string/hr_domain_title_time"
+
+                    app:domainTitleTextColor="#FFFFFF"
+                    app:domainTitleTextSize="14dp"
+                    app:graphBackgroundColor="#000000"
+                    app:graphMarginBottom="20dp"
+                    app:graphMarginLeft="30dp"
+
+                    app:graphMarginRight="30dp"
+                    app:graphMarginTop="20dp"
+                    app:gridBackgroundColor="#000000"
+                    app:gridInsetBottom="20dp"
+                    app:gridInsetLeft="25dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/qrs_plot"
+                    app:layout_constraintVertical_chainStyle="spread"
+                    app:layout_constraintVertical_weight="0.5"
+                    app:paddingBottom="5dp"
+                    app:paddingLeft="5dp"
+                    app:paddingRight="5dp"
+                    app:paddingTop="5dp"
+                    app:rangeLineColor="#555555"
+                    app:rangeOriginLineColor="#555555"
+                    app:rangeTitle="@string/hr_range_title"
+                    app:rangeTitleTextColor="#FFFFFF"
+                    app:rangeTitleTextSize="14dp"
+                    app:renderMode="use_background_thread"
+                    app:title="@string/hr_title"
+                    app:titleTextColor="#000000"
+                    app:titleTextSize="15dp" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
