update plot visibility

--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -79,7 +79,7 @@
                     app:graphMarginLeft="10dp"
                     app:graphMarginRight="10dp"
                     app:graphMarginTop="10dp"
-                    app:gridBackgroundColor="@color/black"
+                    app:gridBackgroundColor="@color/white"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
