--- a/mobile/src/main/res/menu/main_menu.xml
+++ b/mobile/src/main/res/menu/main_menu.xml
@@ -10,10 +10,10 @@
         android:id="@+id/save"
         android:title="@string/save_item">
         <menu>
-            <item
-                android:id="@+id/save_all"
-                android:title="@string/save_all_item"
-                app:showAsAction="never" />
+<!--            <item-->
+<!--                android:id="@+id/save_all"-->
+<!--                android:title="@string/save_all_item"-->
+<!--                app:showAsAction="never" />-->
             <item
                 android:id="@+id/save_both"
                 android:title="@string/save_both_item"
@@ -26,14 +26,14 @@
                 android:id="@+id/save_data"
                 android:title="@string/save_data_item"
                 app:showAsAction="never" />
-            <item
-                android:id="@+id/save_device_data"
-                android:title="@string/save_device_data_item"
-                app:showAsAction="never" />
-            <item
-                android:id="@+id/save_qrs_data"
-                android:title="@string/save_qrs_data_item"
-                app:showAsAction="never" />
+<!--            <item-->
+<!--                android:id="@+id/save_device_data"-->
+<!--                android:title="@string/save_device_data_item"-->
+<!--                app:showAsAction="never" />-->
+<!--            <item-->
+<!--                android:id="@+id/save_qrs_data"-->
+<!--                android:title="@string/save_qrs_data_item"-->
+<!--                app:showAsAction="never" />-->
         </menu>
     </item>
     <item
